--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
+  "files": [
+    "src/prevent-import-loader.js"
+  ],
   "scripts": {
+    "build": "webpack",
+    "build-pc": "cross-env DEVICE=pc webpack",
+    "build-mobile": "cross-env DEVICE=mobile webpack",
+    "dev": "webpack-dev-server",
+    "dev-pc": "cross-env DEVICE=pc webpack-dev-server",
+    "dev-mobile": "cross-env DEVICE=mobile webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "import",
+    "prevent",
+    "webpack",
+    "loader"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jackyr/prevent-import-loader.git"
@@ -15,5 +30,21 @@
   "bugs": {
     "url": "https://github.com/jackyr/prevent-import-loader/issues"
   },
-  "homepage": "https://github.com/jackyr/prevent-import-loader#readme"
+  "homepage": "https://github.com/jackyr/prevent-import-loader#readme",
+  "dependencies": {
+    "@babel/generator": "^7.21.5",
+    "@babel/parser": "^7.21.8",
+    "@babel/traverse": "^7.21.5",
+    "@babel/types": "^7.21.5",
+    "loader-utils": "^3.2.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "html-webpack-plugin": "^5.5.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
+  }
 }
